[gd_scene load_steps=2 format=2]

[ext_resource path="res://gui/resultats.gd" type="Script" id=1]

[node name="resultats" type="VBoxContainer"]
margin_top = 213.0
margin_right = 1024.0
margin_bottom = 529.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="explication_gauche" type="RichTextLabel" parent="HBoxContainer"]
margin_right = 510.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="explication_droite" type="RichTextLabel" parent="HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 160.0
margin_right = 1024.0
margin_bottom = 316.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="phrase_de_conclusion" type="RichTextLabel" parent="HBoxContainer2"]
margin_right = 849.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="ColorRect" type="ColorRect" parent="HBoxContainer2"]
margin_left = 853.0
margin_right = 1024.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
color = Color( 1, 1, 1, 0 )
